[tool.poetry]
name = "dcdljeu"
version = "2.0.0"
description = "Un solveur du jeu Compte Est Bon et Mot Le Plus Long issu de Des Chiffres et Des Lettres"
authors = ["RadoTheProgrammer <rado@arazakar.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
